[tool.poetry]
name = "sherlock-holmes-lstm"
version = "0.1.0"
description = "LSTM + Attention model for next word prediction on Sherlock Holmes corpus"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "final_stuff"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.0"
tensorflow = "^2.10.0"
numpy = "^1.21.0"
matplotlib = "^3.5.0"
seaborn = "^0.11.0"
pandas = "^1.3.0"
scikit-learn = "^1.0.0"
requests = "^2.25.0"
nltk = "^3.6.0"
wordcloud = "^1.8.0"
tqdm = "^4.62.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.0.0"
black = "^22.0.0"
flake8 = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
train = "final_stuff.pytorch_lstm_attention:main"
evaluate = "final_stuff.evaluate_pytorch_model:evaluate_model_performance"
